<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context="com.apiminer.demos.wallet.WalletActivity">
    <item
            android:id="@+id/action_qr"
            android:title="@string/qr_code"
            android:icon="@drawable/ic_qrcode"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/action_refresh"
            android:title="@string/action_refresh"
            android:icon="@drawable/ic_refresh"
            app:showAsAction="always"/>
    <item
            android:id="@+id/action_licenses"
            android:title="@string/open_source_licenses"
            android:icon="@android:drawable/ic_menu_help"
            app:showAsAction="never"
        />
</menu>
