<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="com.apiminer.demos.wallet.SendActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/activity_horizontal_margin">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="24dp"
                android:text="@string/recipient_description"/>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <AutoCompleteTextView
                    android:id="@+id/recipient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/recipient"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <AutoCompleteTextView
                    android:id="@+id/value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/wac_amount"
                    android:inputType="numberDecimal"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:imeActionLabel="@string/send"
                    android:imeOptions="actionSend"/>

        </com.google.android.material.textfield.TextInputLayout>

        <ProgressBar
                android:id="@+id/send_progress"
                style="?android:attr/progressBarStyleHorizontal"
                android:indeterminate="true"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="invisible"/>

        <Button
                android:id="@+id/send"
                style="?android:textAppearanceSmall"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/send"
                android:textStyle="bold"/>
    </LinearLayout>
</ScrollView>
