<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        android:id="@+id/main_layout"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.apiminer.demos.wallet.WalletActivity">

    <RelativeLayout
            android:id="@+id/panel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:background="@color/colorPrimary"
            android:elevation="5dp"
            android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_height="?attr/actionBarSize"
                android:layout_width="match_parent"
                android:background="@color/transparent"
                app:title=""/>

        <LinearLayout
                android:id="@+id/balance_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal"
                android:gravity="center|bottom">

            <TextView
                    android:id="@+id/balance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="40sp"
                    android:textColor="@color/primaryTextColor"
                    tools:text="100.001"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textColor="@color/secondaryLightColor"
                    android:text="@string/wac"/>
        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/balance_wrapper"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorAccent"
                android:text="@string/wallet_coin_balance"/>

    </RelativeLayout>

    <LinearLayout
            android:id="@+id/account_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/panel"
            android:orientation="vertical"
            android:elevation="3dp"
            android:background="@color/faintBackground">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                android:text="@string/wallet_address"/>
        <TextView
                android:id="@+id/account_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="monospace"
                android:textColor="@color/colorPrimaryDark"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="10dp"
                tools:text="0x23fa157a1191094f7eaec704d03a7239828d263f"
                />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:layout_below="@+id/account_wrapper"/>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/fab_margin"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            app:srcCompat="@android:drawable/ic_menu_upload"/>

</RelativeLayout>
